--- a/final-framework-testng/test-output/emailable-report.html
+++ b/final-framework-testng/test-output/emailable-report.html
@@ -8,18 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">eLearning test Suite</th></tr>
-<tr><td><a href="#t0">LogOut_ELTC_016</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">27,393</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">AdminLogin_ELTC_017</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">19,792</td><td></td><td></td></tr>
-<tr><td><a href="#t2">ChangePassword_ELTC_018</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">27,761</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">74,946</th><th colspan="2"></th></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">19,451</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">eLearning test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">LogOut_ELTC_016 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.training.sanity.tests.LogOut_ELTC_016</td><td><a href="#m0">LogoutTest</a></td><td rowspan="1">1572024235269</td><td rowspan="1">8221</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">AdminLogin_ELTC_017 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.training.sanity.tests.AdminLogin_ELTC_017</td><td><a href="#m1">AdminLogin</a></td><td rowspan="1">1572024257623</td><td rowspan="1">5696</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">ChangePassword_ELTC_018 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.training.sanity.tests.ChangePassword_ELTC_018</td><td><a href="#m2">ChangePassword</a></td><td rowspan="1">1572024280532</td><td rowspan="1">10596</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.training.sanity.tests.CommentTask_ELTC_046</td><td><a href="#m0">UseSubscribeCourse</a></td><td rowspan="1">1572517082318</td><td rowspan="1">9275</td></tr></tbody>
 </table>
-<h2>LogOut_ELTC_016</h2><h3 id="m0">com.training.sanity.tests.LogOut_ELTC_016#LogoutTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>AdminLogin_ELTC_017</h2><h3 id="m1">com.training.sanity.tests.AdminLogin_ELTC_017#AdminLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>ChangePassword_ELTC_018</h2><h3 id="m2">com.training.sanity.tests.ChangePassword_ELTC_018#ChangePassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.training.sanity.tests.CommentTask_ELTC_046#UseSubscribeCourse</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
