--- a/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
+++ b/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7161c7">  <td>19/10/25 22:50:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChangePassword_ELTC_018.ChangePassword()[pri:0, instance:com.training.sanity.tests.ChangePassword_ELTC_018@6325a3ee]">ChangePassword</td> 
-  <td>main@22429093</td>   <td></td> </tr>
-<tr bgcolor="7161c7">  <td>19/10/25 22:51:11</td>   <td>12025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ChangePassword_ELTC_018.CloseBrowser()[pri:0, instance:com.training.sanity.tests.ChangePassword_ELTC_018@6325a3ee]">&lt;&lt;CloseBrowser</td> 
-<td>&nbsp;</td>  <td>main@22429093</td>   <td></td> </tr>
-<tr bgcolor="7161c7">  <td>19/10/25 22:50:43</td>   <td>-15924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ChangePassword_ELTC_018.beforeMethod()[pri:0, instance:com.training.sanity.tests.ChangePassword_ELTC_018@6325a3ee]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@22429093</td>   <td></td> </tr>
-<tr bgcolor="7161c7">  <td>19/10/25 22:50:43</td>   <td>-15960</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ChangePassword_ELTC_018.setup()[pri:0, instance:com.training.sanity.tests.ChangePassword_ELTC_018@6325a3ee]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22429093</td>   <td></td> </tr>
+<tr bgcolor="7161c7">  <td>19/10/31 15:48:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommentTask_ELTC_046.UseSubscribeCourse()[pri:0, instance:com.training.sanity.tests.CommentTask_ELTC_046@3a5ed7a6]">UseSubscribeCourse</td> 
+  <td>main@245475541</td>   <td></td> </tr>
+<tr bgcolor="7161c7">  <td>19/10/31 15:47:52</td>   <td>-10100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CommentTask_ELTC_046.beforeMethod()[pri:0, instance:com.training.sanity.tests.CommentTask_ELTC_046@3a5ed7a6]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@245475541</td>   <td></td> </tr>
+<tr bgcolor="7161c7">  <td>19/10/31 15:47:52</td>   <td>-10131</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CommentTask_ELTC_046.setup()[pri:0, instance:com.training.sanity.tests.CommentTask_ELTC_046@3a5ed7a6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@245475541</td>   <td></td> </tr>
 </table>
