--- a/final-framework-testng/test-output/index.html
+++ b/final-framework-testng/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\NARASIMHALINGALA\AppData\Local\Temp\testng-eclipse--687434728\testng-customsuite.xml</span>
+                    <span>C:\Users\NARASIMHALINGALA\AppData\Local\Temp\testng-eclipse--82920192\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.CommentTask_ELTC_046" hash-for-method="UseSubscribeCourse">UseSubscribeCourse</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RegUserDB_ELTC_078" hash-for-method="UserRegistration(Chris, Martis, cmartis@gmail.com, smartis, test1234, test1234, 1234345681, English)">UserRegistration(Chris, Martis, cmartis@gmail.com, smartis, test1234, test1234, 1234345681, English)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RegUserDB_ELTC_078" hash-for-method="UserRegistration(simo, hurl, shurl@gmail.com, shurl, test1234, test1234, 1234345678, English)">UserRegistration(simo, hurl, shurl@gmail.com, shurl, test1234, test1234, 1234345678, English)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RegUserDB_ELTC_078" hash-for-method="UserRegistration(sanal, menon, smenon@gmail.com, smenon, test1234, test1234, 1234345680, English)">UserRegistration(sanal, menon, smenon@gmail.com, smenon, test1234, test1234, 1234345680, English)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +130,31 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.training.sanity.tests.CommentTask_ELTC_046</span>
+              <span class="class-name">com.training.sanity.tests.RegUserDB_ELTC_078</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="UseSubscribeCourse">
-                  </a> <!-- UseSubscribeCourse -->
-                  <span class="method-name">UseSubscribeCourse</span>
+                  <a name="UserRegistration(Chris, Martis, cmartis@gmail.com, smartis, test1234, test1234, 1234345681, English)">
+                  </a> <!-- UserRegistration(Chris, Martis, cmartis@gmail.com, smartis, test1234, test1234, 1234345681, English) -->
+                  <span class="method-name">UserRegistration</span>
+                  <span class="parameters">(Chris, Martis, cmartis@gmail.com, smartis, test1234, test1234, 1234345681, English)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="UserRegistration(simo, hurl, shurl@gmail.com, shurl, test1234, test1234, 1234345678, English)">
+                  </a> <!-- UserRegistration(simo, hurl, shurl@gmail.com, shurl, test1234, test1234, 1234345678, English) -->
+                  <span class="method-name">UserRegistration</span>
+                  <span class="parameters">(simo, hurl, shurl@gmail.com, shurl, test1234, test1234, 1234345678, English)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="UserRegistration(sanal, menon, smenon@gmail.com, smenon, test1234, test1234, 1234345680, English)">
+                  </a> <!-- UserRegistration(sanal, menon, smenon@gmail.com, smenon, test1234, test1234, 1234345680, English) -->
+                  <span class="method-name">UserRegistration</span>
+                  <span class="parameters">(sanal, menon, smenon@gmail.com, smenon, test1234, test1234, 1234345680, English)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +162,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\NARASIMHALINGALA\AppData\Local\Temp\testng-eclipse--687434728\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\NARASIMHALINGALA\AppData\Local\Temp\testng-eclipse--82920192\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +171,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.training.sanity.tests.CommentTask_ELTC_046&quot;/&gt;
+      &lt;class name=&quot;com.training.sanity.tests.RegUserDB_ELTC_078&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +211,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'UseSubscribeCourse')
-data.setCell(0, 2, 'com.training.sanity.tests.CommentTask_ELTC_046')
-data.setCell(0, 3, 9275);
+data.setCell(0, 1, 'UserRegistration')
+data.setCell(0, 2, 'com.training.sanity.tests.RegUserDB_ELTC_078')
+data.setCell(0, 3, 21264);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'UserRegistration')
+data.setCell(1, 2, 'com.training.sanity.tests.RegUserDB_ELTC_078')
+data.setCell(1, 3, 13949);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'UserRegistration')
+data.setCell(2, 2, 'com.training.sanity.tests.RegUserDB_ELTC_078')
+data.setCell(2, 3, 12948);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 48 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,19 +254,47 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.training.sanity.tests.CommentTask_ELTC_046</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.training.sanity.tests.RegUserDB_ELTC_078</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">31 ms</span>
+                <span class="method-start">387 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">UseSubscribeCourse</span>
-                <span class="method-start">10131 ms</span>
+                <span class="method-name">UserRegistration(simo, hurl, shurl@gmail.com, shurl, test1234, test1234, 1234345678, English)</span>
+                <span class="method-start">46403 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">CloseBrowser</span>
+                <span class="method-start">67672 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod</span>
+                <span class="method-start">69549 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">UserRegistration(sanal, menon, smenon@gmail.com, smenon, test1234, test1234, 1234345680, English)</span>
+                <span class="method-start">116889 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">CloseBrowser</span>
+                <span class="method-start">130841 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod</span>
+                <span class="method-start">132701 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">UserRegistration(Chris, Martis, cmartis@gmail.com, smartis, test1234, test1234, 1234345681, English)</span>
+                <span class="method-start">184371 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">CloseBrowser</span>
+                <span class="method-start">197320 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
