--- a/final-framework-testng/test-output/old/Default suite/methods.html
+++ b/final-framework-testng/test-output/old/Default suite/methods.html
@@ -1,10 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7161c7">  <td>19/10/31 15:47:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CommentTask_ELTC_046.setup()[pri:0, instance:com.training.sanity.tests.CommentTask_ELTC_046@3a5ed7a6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@245475541</td>   <td></td> </tr>
-<tr bgcolor="7161c7">  <td>19/10/31 15:47:52</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CommentTask_ELTC_046.beforeMethod()[pri:0, instance:com.training.sanity.tests.CommentTask_ELTC_046@3a5ed7a6]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@245475541</td>   <td></td> </tr>
-<tr bgcolor="7161c7">  <td>19/10/31 15:48:02</td>   <td>10131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommentTask_ELTC_046.UseSubscribeCourse()[pri:0, instance:com.training.sanity.tests.CommentTask_ELTC_046@3a5ed7a6]">UseSubscribeCourse</td> 
-  <td>main@245475541</td>   <td></td> </tr>
+<tr bgcolor="9963d8">  <td>19/11/06 23:30:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegUserDB_ELTC_078.setup()[pri:0, instance:com.training.sanity.tests.RegUserDB_ELTC_078@3cef309d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@592688102</td>   <td></td> </tr>
+<tr bgcolor="9963d8">  <td>19/11/06 23:30:29</td>   <td>380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegUserDB_ELTC_078.beforeMethod()[pri:0, instance:com.training.sanity.tests.RegUserDB_ELTC_078@3cef309d]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@592688102</td>   <td></td> </tr>
+<tr bgcolor="9963d8">  <td>19/11/06 23:31:15</td>   <td>46395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegUserDB_ELTC_078.UserRegistration(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.training.sanity.tests.RegUserDB_ELTC_078@3cef309d]">UserRegistration</td> 
+  <td>main@592688102</td>   <td></td> </tr>
+<tr bgcolor="9963d8">  <td>19/11/06 23:31:36</td>   <td>67664</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegUserDB_ELTC_078.CloseBrowser()[pri:0, instance:com.training.sanity.tests.RegUserDB_ELTC_078@3cef309d]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td>  <td>main@592688102</td>   <td></td> </tr>
+<tr bgcolor="9963d8">  <td>19/11/06 23:31:38</td>   <td>69541</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegUserDB_ELTC_078.beforeMethod()[pri:0, instance:com.training.sanity.tests.RegUserDB_ELTC_078@3cef309d]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@592688102</td>   <td></td> </tr>
+<tr bgcolor="9963d8">  <td>19/11/06 23:32:26</td>   <td>116881</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegUserDB_ELTC_078.UserRegistration(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.training.sanity.tests.RegUserDB_ELTC_078@3cef309d]">UserRegistration</td> 
+  <td>main@592688102</td>   <td></td> </tr>
+<tr bgcolor="9963d8">  <td>19/11/06 23:32:39</td>   <td>130833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegUserDB_ELTC_078.CloseBrowser()[pri:0, instance:com.training.sanity.tests.RegUserDB_ELTC_078@3cef309d]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td>  <td>main@592688102</td>   <td></td> </tr>
+<tr bgcolor="9963d8">  <td>19/11/06 23:32:41</td>   <td>132694</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegUserDB_ELTC_078.beforeMethod()[pri:0, instance:com.training.sanity.tests.RegUserDB_ELTC_078@3cef309d]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@592688102</td>   <td></td> </tr>
+<tr bgcolor="9963d8">  <td>19/11/06 23:33:33</td>   <td>184363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegUserDB_ELTC_078.UserRegistration(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.training.sanity.tests.RegUserDB_ELTC_078@3cef309d]">UserRegistration</td> 
+  <td>main@592688102</td>   <td></td> </tr>
+<tr bgcolor="9963d8">  <td>19/11/06 23:33:46</td>   <td>197312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegUserDB_ELTC_078.CloseBrowser()[pri:0, instance:com.training.sanity.tests.RegUserDB_ELTC_078@3cef309d]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td>  <td>main@592688102</td>   <td></td> </tr>
 </table>
